# baidu-serp-api

./: .gitignore  CLAUDE.md  README.md  README_CN.md  example_optimized.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
baidu_serp_api/: __init__.py  baidu_mobile.py  baidu_pc.py  util.py
tests/: __init__.py  test_baidu_mobile.py  test_baidu_pc.py  test_baidu_serp_api.py  test_util.py
